Prod-EU/force-app/main/default/objects/Complaint_Code_and_Severity__c/Complaint_Code_and_Severity__c.object-meta.xml
<CustomObject>
    <label>Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>