Prod-EU/force-app/main/default/objects/Complaint_Code_and_Severity__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <description>Stores if problem code is related complaints or Inquiry</description>
    <label>Code Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>