Prod-EU/force-app/main/default/objects/Complaint_Code_and_Severity__c/fields/Full_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Full_Code_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>