Prod-EU/force-app/main/default/objects/Complaint_Code_and_Severity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Type__c</columns>
    <columns>Full_Code_Text__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>